# anki-telegram-bot

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 103c81c2bbf7_add_language_to_user.py  1edac2526f70_initial_migration.py  bb7687bb6cc7_add_variants_to_card_model.py
src/memorius/: __main__.py  config.py
src/memorius/database/: database.py  models.py
src/memorius/database/models/: __init__.py  card.py  deck.py  statistics.py  user.py
src/memorius/database/repositories/: __init__.py  card.py  deck.py  statistics.py  user.py
src/memorius/handlers/: __init__.py
src/memorius/handlers/user/: __init__.py  card.py  deck.py  help.py  language.py  session.py  start.py  statistics.py
src/memorius/i18n/en/: cards.ftl  common.ftl  decks.ftl  help.ftl  review.ftl  start.ftl  statistics.ftl
src/memorius/i18n/ru/: cards.ftl  common.ftl  decks.ftl  help.ftl  review.ftl  start.ftl  statistics.ftl
src/memorius/keyboards/: __init__.py  auth.py  card.py  common.py  deck.py  keyboards.py  menu.py
src/memorius/middlewares/: database.py  translate.py
src/memorius/utils/: __init__.py  states.py  validators.py
tests/: pytest.ini  test_handlers.py
